@@ -1,7 +1,10 @@
 Version 0.19 ( )
 -------------------------------
 
-- Bug #1862727 fixed libssh2_poll() to work on windows (by defining HAVE_SELECT).
+- Neil Gierman provided improved Visual Studio 2008 code in bug #1946268
+
+- Bug #1862727 fixed libssh2_poll() to work on windows (by defining
+  HAVE_SELECT).
 
 - Based on bug #1815692, we introduce libssh2_sftp_seek2() that allows seeking
   beyond the 2GB margin even on 32bit machines.
